--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "devDependencies": {
         "@commitlint/cli": "^19.3.0",
         "@commitlint/config-conventional": "^19.2.2",
+        "@primevue/auto-import-resolver": "^4.0.0-beta.5",
         "@trivago/prettier-plugin-sort-imports": "^4.2.0",
         "@typescript-eslint/eslint-plugin": "^5.59.5",
         "@typescript-eslint/parser": "^5.59.5",
@@ -33,6 +34,7 @@
         "stylelint-prettier": "^4.0.2",
         "tailwindcss": "^3.1.8",
         "typescript": "^5.0.4",
+        "unplugin-vue-components": "^0.27.2",
         "vite": "^5.0.0"
     },
     "dependencies": {
@@ -43,6 +45,7 @@
         "@fullcalendar/resource-timeline": "^6.1.14",
         "@fullcalendar/vue3": "^6.1.14",
         "@inertiajs/vue3": "^1.0.2",
+        "@primevue/themes": "^4.0.0-rc.2",
         "@tailwindcss/typography": "^0.5.9",
         "@vitejs/plugin-vue": "^5.0.5",
         "autoprefixer": "^10.4.15",
@@ -53,7 +56,10 @@
         "mitt": "^3.0.0",
         "pinia": "^2.0.33",
         "pinia-plugin-persistedstate": "^3.1.0",
+        "primeicons": "^7.0.0",
+        "primevue": "^4.0.0-rc.2",
         "remixicon": "^3.5.0",
+        "tailwindcss-primeui": "^0.3.2",
         "vue": "^3.4.29",
         "vue-toastification": "^2.0.0-rc.5"
     }
