--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "postcss-html": "^1.5.0",
         "prettier": "^3.0.3",
         "prettier-plugin-css-order": "^2.1.2",
+        "prettier-plugin-tailwindcss": "^0.6.5",
         "pusher-js": "^8.4.0-rc2",
         "sass": "^1.62.0",
         "stylelint": "^15.10.3",
