style: sort css properties with prettier-plugin-css-order

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,7 @@
 {
     "plugins": [
-        "@trivago/prettier-plugin-sort-imports"
+        "@trivago/prettier-plugin-sort-imports",
+        "prettier-plugin-css-order"
     ],
     "importOrder": [
         "^@fullcalendar/(.*)$",
