--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "postcss": "^8.4.16",
         "postcss-html": "^1.5.0",
         "prettier": "^3.0.3",
+        "prettier-plugin-css-order": "^2.1.2",
         "pusher-js": "^8.4.0-rc2",
         "sass": "^1.62.0",
         "stylelint": "^15.10.3",
