--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,9 +52,9 @@ stylelint:
     - npx --no -- stylelint resources/{js,sass}/**/*.{css,sass,vue}
 dusk:
   stage: test
-  image: docker
+  image: docker:26-cli
   services:
-    - docker:dind
+    - docker:26-dind
   variables:
     DOCKER_HOST: tcp://docker:2375
     DOCKER_TLS_CERTDIR: ""
