--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "vyuldashev/xml-to-array": "^1.1"
     },
     "require-dev": {
+        "driftingly/rector-laravel": "^2.0",
         "laravel-lang/common": "^3.1",
         "laravel/dusk": "^8.2",
         "laravel/pint": "^1.0",
@@ -32,6 +33,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "^11",
+        "rector/rector": "^2.0",
         "spatie/laravel-ignition": "^2.0",
         "squizlabs/php_codesniffer": "^3.7"
     },
