--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,55 +1,93 @@
-# You can override the included template(s) by including variable overrides
-# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
-# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/pipeline/#customization
-# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
-# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
-# Note that environment variables can be set in several places
-# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
-stages:
-  - lint
-  - test
 workflow:
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
-sast:
-  stage: test
+
+stages:
+  - build
+  - lint
+  - test
+
 include:
   - template: Jobs/SAST.latest.gitlab-ci.yml
   - template: Jobs/Secret-Detection.latest.gitlab-ci.yml
-commitlint:
-  stage: lint
+
+### Base images
+.node:
   image: node:20-alpine
+  cache:
+    - key:
+        files:
+          - package-lock.json
+        prefix: node
+      paths:
+        - node_modules/
+
+.php:
+  image: php:8.2-alpine
+  cache:
+    - key:
+        files:
+          - composer-lock.json
+        prefix: composer
+      paths:
+        - vendor/
+
+### Build stage
+composer:
+  extends: .php
+  stage: build
+  before_script:
+    - EXPECTED_CHECKSUM="$(php -r 'copy("https://composer.github.io/installer.sig", "php://stdout");')"
+    - php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+    - ACTUAL_CHECKSUM="$(php -r "echo hash_file('sha384', 'composer-setup.php');")"
+    - test "$EXPECTED_CHECKSUM" == "$ACTUAL_CHECKSUM"
+    - php composer-setup.php
+  script:
+    - php composer.phar install --ignore-platform-reqs
+
+node:
+  extends: .node
+  stage: build
   before_script:
     - apk add --no-cache git
+  script:
     - npm ci
+
+### Lint stage
+commitlint:
+  extends: .node
+  stage: lint
   script:
     - npx --no -- commitlint --from $CI_MERGE_REQUEST_DIFF_BASE_SHA
   rules:
     - if: $CI_MERGE_REQUEST_DIFF_BASE_SHA
+
 eslint:
+  extends: .node
   stage: lint
-  image: node:20-alpine
-  before_script:
-    - apk add --no-cache git
-    - npm ci
   script:
     - npx --no -- eslint resources/js/**/*.{js,ts,vue}
+
+phpcs:
+  extends: .php
+  stage: lint
+  script:
+    - vendor/bin/phpcs
+
 prettier:
+  extends: .node
   stage: lint
   image: node:20-alpine
-  before_script:
-    - apk add --no-cache git
-    - npm ci
   script:
     - npx --no -- prettier --list-different resources/js resources/sass
+
 stylelint:
+  extends: .node
   stage: lint
-  image: node:20-alpine
-  before_script:
-    - apk add --no-cache git
-    - npm ci
   script:
     - npx --no -- stylelint resources/{js,sass}/**/*.{css,sass,vue}
+
+### Test stage
 dusk:
   stage: test
   image: docker:26-cli
