--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
         "pinia": "^2.0.33",
         "pinia-plugin-persistedstate": "^3.1.0",
         "primeicons": "^7.0.0",
-        "primevue": "^4.0.0-rc.2",
+        "primevue": "^4.3.2",
         "remixicon": "^3.5.0",
         "tailwindcss-primeui": "^0.3.2",
-        "vue": "^3.4.29"
+        "vue": "^3.5.13"
     }
 }
