--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": [
         "local>ub/onit/renovate-config",
-        "security:only-security-updates"
+        "security:only-security-updates",
+        ":approveMajorUpdates"
     ]
 }
