build(renovate): run renovate for release branches

--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,9 @@
         "local>ub/onit/renovate-config",
         "security:only-security-updates",
         ":approveMajorUpdates"
+    ],
+    "baseBranchPatterns": [
+        "$default",
+        "/^release[/-].*/"
     ]
 }
