build: fix renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
         "security:only-security-updates",
         ":approveMajorUpdates"
     ],
-    "baseBranchPatterns": [
+    "baseBranches": [
         "$default",
         "/^release[/-].*/"
     ]
