--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "primeicons": "^7.0.0",
         "primevue": "^4.3.2",
         "remixicon": "^4.6.0",
+        "renovate": "^39.264.1",
         "tailwindcss-primeui": "^0.3.2",
         "vue": "^3.5.13"
     }
