ci: don't validate renovate config on main

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,6 +132,7 @@ renovate:
     - npx --no --package renovate -- renovate-config-validator --strict
   rules:
     - changes: [renovate.json]
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
 
 stylelint:
   extends: .node
