chore(devenv): use devenv in .envrc

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,4 @@
-watch_file devenv.nix .env.devenv
-use flake . --impure
+if ! use devenv --quiet; then
+    watch_file devenv.nix
+    use flake . --no-pure-eval
+fi
